feat(stage1): implement WP6-C2 association validation